# Neko

./: .gitignore  .travis  .travis.yml  ;  Cargo.toml  Makefile  README.md  clippy.toml  collab-tools.md  commandes.txt  doc.tex  rustfmt.toml  search-index.js  test_char.c
bitflags/: index.html  macro.bitflags!.html
developers-guides/: neko-paradigme.md
dylib/: index.html  struct.DynamicLibrary.html
examples/: start.rs
git2/: constant.ADD_CHECK_PATHSPEC.html  constant.ADD_DEFAULT.html  constant.ADD_DISABLE_PATHSPEC_MATCH.html  constant.ADD_FORCE.html  constant.DEFAULT.html  constant.DIFF_STATS_FULL.html  constant.DIFF_STATS_INCLUDE_SUMMARY.html  constant.DIFF_STATS_NONE.html  constant.DIFF_STATS_NUMBER.html  constant.DIFF_STATS_SHORT.html  constant.PATHSPEC_DEFAULT.html  constant.PATHSPEC_FAILURES_ONLY.html  constant.PATHSPEC_FIND_FAILURES.html  constant.PATHSPEC_IGNORE_CASE.html  constant.PATHSPEC_NO_GLOB.html  constant.PATHSPEC_NO_MATCH_ERROR.html  constant.PATHSPEC_USE_CASE.html  constant.REPOSITORY_INIT_SHARED_ALL.html  constant.REPOSITORY_INIT_SHARED_GROUP.html  constant.REPOSITORY_INIT_SHARED_UMASK.html  constant.REVPARSE_MERGE_BASE.html  constant.REVPARSE_RANGE.html  constant.REVPARSE_SINGLE.html  constant.SORT_NONE.html  constant.SORT_REVERSE.html  constant.SORT_TIME.html  constant.SORT_TOPOLOGICAL.html  constant.SSH_CUSTOM.html  constant.SSH_INTERACTIVE.html  constant.SSH_KEY.html  constant.SSH_MEMORY.html  constant.STATUS_CONFLICTED.html  constant.STATUS_CURRENT.html  constant.STATUS_IGNORED.html  constant.STATUS_INDEX_DELETED.html  constant.STATUS_INDEX_MODIFIED.html  constant.STATUS_INDEX_NEW.html  constant.STATUS_INDEX_RENAMED.html  constant.STATUS_INDEX_TYPECHANGE.html  constant.STATUS_WT_DELETED.html  (+125 more)
libgit2_sys/: GIT_MERGE_TREE_FIND_RENAMES.v.html  constant.GITERR_CALLBACK.html  constant.GITERR_CHECKOUT.html  constant.GITERR_CHERRYPICK.html  constant.GITERR_CONFIG.html  constant.GITERR_DESCRIBE.html  constant.GITERR_FETCHHEAD.html  constant.GITERR_FILESYSTEM.html  constant.GITERR_FILTER.html  constant.GITERR_INDEX.html  constant.GITERR_INDEXER.html  constant.GITERR_INVALID.html  constant.GITERR_MERGE.html  constant.GITERR_NET.html  constant.GITERR_NOMEMORY.html  (+907 more)
src/termion/: Cargo.toml
src/termion/src/: async.rs  click.rs  color.rs  cursor.rs  event.rs  input.rs  keys.rs  lib.rs  mouse.rs  parse.rs  raw.rs  read.rs  simple.rs  size.rs  style.rs  termios.rs  tty.rs
(+427 files in other folders)
