[package]
name = "termion"
version = "1.0.5"
authors = ["Ticki <Ticki@users.noreply.github.com>"]
description = "A bindless library for manipulating terminals."
repository = "https://github.com/ticki/termion"
documentation = "http://ticki.github.io/termion/"
license = "MIT"
keywords = ["tty", "color", "terminal", "password", "tui"]
exclude = ["target", "CHANGELOG.md", "image.png", "Cargo.lock"]

[target.'cfg(not(target_os = "redox"))'.dependencies]
libc = "0.2.8"
